# LIMA-Guardian-Suite

./: .gitignore  README.md  pyproject.toml
.github/workflows/: ci.yml
app/services/guardian/: policy.py  suite.py
docs/extraction/: guardian_spine_extraction_plan.md  sparkbot_field_level_parity.md  sparkbot_route_shape_parity.md  sparkbot_serializer_fixture_comparison.md
docs/reference/original_guardians/: Executive_Guardian.md  Memory_Guardian.md  README.md  Task_Guardian.md  tokenguardian.md
guardian/: vault.py
guardian_core/: __init__.py  decision.py  policy.py
lima_guardian/: __init__.py  auth.py  config.py  improvement.py  pending_approvals.py  policy.py  spine_interfaces.py  spine_models.py  spine_store_sqlite.py  token_guardian.py  vault.py  verifier.py
tests/: test_guardian_decision_contract.py  test_lima_guardian_pending_policy.py  test_lima_guardian_spine_interfaces.py  test_lima_guardian_spine_store_sqlite.py  test_lima_guardian_token_verifier_improvement.py  test_lima_guardian_vault_auth.py  test_local_model_preview_policy.py  test_policy_core.py  test_spine_field_parity.py  test_spine_route_shape_parity.py  test_spine_serializer_fixture_compare.py
tests/fixtures/spine_serializer_expected/: open_queue.json  task_detail.json
tools/: spine_field_parity.py  spine_readonly_adapter_prototype.py  spine_route_shape_parity.py  spine_serializer_fixture_compare.py  spine_translation_parity.py
